<resources>
    <string name="app_name">Trippe</string>
    <string name="title_home">Trips</string>
    <string name="title_dashboard">Calendar</string>
    <string name="title_notifications">Currency</string>
    <string name="add_trip">Add Trip</string>
    <string name="destination_label">Destination</string>
    <string name="national_radio_btn">National</string>
    <string name="international_radio_btn">International</string>
    <string name="congrats_label">Congratulations on your upcoming Trip!!!</string>
    <string name="selection_prompt">First, tell us whether your Trip is National or International</string>
    <string name="next_btn">Next</string>
    <string-array name="currency_array">
        <item>USD - US Dollar</item>
        <item>EUR - Euro</item>
        <item>AUD - Australian Dollar</item>
        <item>BGN - Bulgarian Lev</item>
        <item>BRL - Brazilian real</item>
        <item>CAD - Canadian Dollar</item>
        <item>CHF - Swiss Franc</item>
        <item>CNY - Chinese Yuan Renminbi</item>
        <item>CZK - Czech Koruna</item>
        <item>DKK - Danish Krone</item>
        <item>GBP - Pound Sterling</item>
        <item>HKD - Hong Kong Dollar</item>
        <item>HRK - Croatian Kuna</item>
        <item>HUF - Hungarian Forint</item>
        <item>IDR - Indonesian Rupiah</item>
        <item>ILS - Israeli Shekel</item>
        <item>INR - Indian Rupee</item>
        <item>ISK - Icelandic Krona</item>
        <item>JPY - Japanese Yen</item>
        <item>KRW - South Korean Won</item>
        <item>MXN - Mexican Peso</item>
        <item>NOK - Norwegian Krone</item>
        <item>NZD - New Zealand Dollar</item>
        <item>PHP - Philippine Peso</item>
        <item>PLN - Polish Zloty</item>
        <item>SEK - Swedish Krona</item>
        <item>SGD - Singapore Dollar</item>
        <item>THB - Thai Baht</item>
        <item>TRY - Turkish Lira</item>
        <item>RON - Romanian Leu</item>
        <item>RUB - Russian Rouble</item>
        <item>ZAR - South African Rand</item>
    </string-array>
    <string-array name="states">
        <item>Select a State</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>District of Columbia(DC)</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
</resources>
