<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioButton
        android:id="@+id/nationalRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="349dp"
        android:onClick="nationalRadioButtonOnClick"
        android:text="@string/national_radio_btn"
        android:textSize="24sp" />

    <RadioButton
        android:id="@+id/internationalRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="351dp"
        android:layout_marginEnd="35dp"
        android:onClick="internationalRadioButtonOnClick"
        android:text="@string/international_radio_btn"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/congratsLabel"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="48dp"
        android:text="@string/congrats_label"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/selectionPromptLabel"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="174dp"
        android:text="@string/selection_prompt"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="92dp"
        android:onClick="displayAddTripForm"
        android:text="@string/next_btn" />

</RelativeLayout>